--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,4 +16,7 @@ dependencies {
     compile 'com.facebook.react:react-native:+'
     compile 'com.android.support:support-v4:+'
     compile 'com.google.android.gms:play-services-location:+'
+    compile 'com.github.tony19:logback-android-core:1.1.1-4'
+    compile 'com.github.tony19:logback-android-classic:1.1.1-4'
+    compile 'org.slf4j:slf4j-api:1.7.6'
 }
