--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<manifest android:hardwareAccelerated="true" android:versionCode="704" android:versionName="0.0.1" package="com.marianhello.react" xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest android:hardwareAccelerated="true" android:versionCode="705" android:versionName="0.2.0-alpha.2" package="com.marianhello.react" xmlns:android="http://schemas.android.com/apk/res/android">
     <application android:hardwareAccelerated="true" android:supportsRtl="true">
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <service
@@ -10,7 +10,7 @@
                 <action android:name="android.content.SyncAdapter"/>
             </intent-filter>
             <meta-data android:name="android.content.SyncAdapter"
-                android:resource="@xml/syncadapter" />
+                android:resource="@xml/syncadapter"/>
         </service>
         <service
             android:name="com.marianhello.bgloc.sync.AuthenticatorService">
