--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,22 +1,14 @@
-apply plugin: 'com.android.library'
-
-android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
-
-    defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 22
-        versionCode 2
-        versionName "0.2.0-alpha.2"
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.1.3'
     }
 }
 
-dependencies {
-    compile 'com.facebook.react:react-native:+'
-    compile 'com.android.support:support-v4:+'
-    compile 'com.google.android.gms:play-services-location:+'
-    compile 'com.github.tony19:logback-android-core:1.1.1-4'
-    compile 'com.github.tony19:logback-android-classic:1.1.1-4'
-    compile 'org.slf4j:slf4j-api:1.7.6'
+allprojects {
+    repositories {
+        jcenter()
+    }
 }
