--- a/android/lib/src/main/AndroidManifest.xml
+++ b/android/lib/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<manifest android:hardwareAccelerated="true" android:versionCode="705" android:versionName="0.2.0-alpha.2" package="com.marianhello.react" xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest android:hardwareAccelerated="true" package="com.marianhello.react" xmlns:android="http://schemas.android.com/apk/res/android">
     <application android:hardwareAccelerated="true" android:supportsRtl="true">
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <service
@@ -45,5 +45,5 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />    
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 </manifest>
