--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-mauron85-background-geolocation",
-  "version": "0.2.0-alpha.5",
+  "name": "react-native-mauron85-background-geolocation-benestudio",
+  "version": "0.2.1",
   "description": "optimized background location tracking",
   "main": "index.js",
   "scripts": {
