--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-mauron85-background-geolocation",
-  "version": "0.3.0-alpha.1",
+  "version": "0.3.1",
   "description": "optimized background location tracking",
   "main": "index.js",
   "scripts": {
