--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 5
-        versionName "0.3.0-alpha.1"
+        versionCode 6
+        versionName "0.3.3"
     }
 }
 
