use events instead callbacks for start and stop methods compatibility with RN 49

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/mauron85/react-native-background-geolocation#readme",
   "peerDependencies": {
-    "react": ">=15.3.0",
-    "react-native": ">=0.33.0"
+    "react": "^16.0.0",
+    "react-native": "^0.49.0"
   }
 }
