--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
   },
   "homepage": "https://github.com/mauron85/react-native-background-geolocation#readme",
   "peerDependencies": {
-    "react-native": ">=0.47.0"
+    "react-native": "^0.49.0"
   }
 }
