iOS RAW location provider iOS handle app terminate event iOS update doc with location providers iOS change location sync behaviour to only sync when syncUrl is provided iOS refactor file names fix .npmignore make JS main object constants shorter update documentation

--- a/.npmignore
+++ b/.npmignore
@@ -1,1 +1,16 @@
+.DS_Store
+node_modules
+npm-debug.log
+
+# Xcode
+xcuserdata
+project.xcworkspace
 ios/react-native
+
+# Android/IJ
+.idea
+.gradle
+local.properties
+*.iml
+build
+*.skip
