--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 7
-        versionName "0.4.0-alpha.6"
+        versionName "0.4.0-rc.1"
     }
 }
 
