--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 8
-        versionName "0.4.0-rc.2"
+        versionName "0.4.1"
     }
 }
 
