iOS update module

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "common"]
+[submodule "ios-common"]
 	path = ios/common
 	url = https://github.com/mauron85/background-geolocation-ios.git
