android split module

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,12 @@ buildscript {
 }
 
 allprojects {
-    repositories {
-        jcenter()
-    }
+  repositories {
+    mavenLocal()
+    jcenter()
+  }
+}
+
+task clean(type: Delete) {
+  delete rootProject.buildDir
 }
