--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
   "homepage": "https://github.com/mauron85/react-native-background-geolocation#readme",
   "peerDependencies": {
     "react-native": ">0.49.0"
+  },
+  "rnpm": {
+    "android": {
+      "sourceDir": "./android/lib"
+    }
   }
 }
