--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -25,8 +25,7 @@ dependencies {
     provided 'com.facebook.react:react-native:+'
     compile 'com.google.android.gms:play-services-base:+'
     compile 'com.google.android.gms:play-services-location:+'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:support-v4:23.+'
     compile 'com.github.tony19:logback-android-core:1.1.1-6'
     compile('com.github.tony19:logback-android-classic:1.1.1-6') {
         exclude group: 'com.google.android', module: 'android'
