--- a/android/lib/src/main/AndroidManifest.xml
+++ b/android/lib/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
        under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.marianhello.react" android:versionName="1.0" android:versionCode="1">
+    package="com.marianhello.bgloc.react" android:versionName="1.0" android:versionCode="1">
     <application>
         <service
             android:name="com.marianhello.bgloc.sync.SyncService"
