--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -26,6 +26,10 @@ android {
         versionCode 13
         versionName "0.5.0-alpha.13"
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
