--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -36,10 +36,7 @@ dependencies {
     compile 'com.facebook.react:react-native:+'
     compile 'com.google.android.gms:play-services-base:11+'
     compile 'com.google.android.gms:play-services-location:11+'
-    compile 'com.github.tony19:logback-android-core:1.1.1-6'
-    compile('com.github.tony19:logback-android-classic:1.1.1-6') {
-        exclude group: 'com.google.android', module: 'android'
-    }
+    compile 'com.github.tony19:logback-android:1.1.1-9'
     compile 'org.slf4j:slf4j-api:1.7.21'
     compile 'com.intentfilter:android-permissions:0.1.6'
 }
