--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "optimized background location tracking",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "node ./scripts/prepublish"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
