--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -1,14 +1,46 @@
+// Notice: Oreo builds are disabled by default until all problems are resolved!!!
+//
+// For Oreo compatibility we are forced to use supportLibVersion >= 26.1.0
+// Unfortunately Android stopped supporting downloading libraries through the SDK Manager,
+// @see https://developer.android.com/topic/libraries/support-library/setup.html
+//
+// You can enable oreo by adding following into root build.gradle:
+//
+// allprojects {
+//   repositories {
+//     maven { url 'https://maven.google.com' }
+//   }
+// }
+//
+// ext {
+//   compileSdkVersion = 26
+//   targetSdkVersion = 26
+//   buildToolsVersion = "26.0.2"
+//   supportLibVersion = "26.1.0"
+//   googlePlayServicesVersion = "11.8.0"
+//   oreoEXPERIMENTAL = "hellyes"
+// }
+//
+//
+// If you don't like this please ask react guys nicely to add google maven repo into
+// their templates.
+
 apply plugin: 'com.android.library'
 
-def DEFAULT_COMPILE_SDK_VERSION = 26
-def DEFAULT_BUILD_TOOLS_VERSION = "26.0.2"
-def DEFAULT_TARGET_SDK_VERSION = 26
+def DEFAULT_COMPILE_SDK_VERSION = 23
+def DEFAULT_BUILD_TOOLS_VERSION = "23.0.1"
+def DEFAULT_TARGET_SDK_VERSION = 23
 def DEFAULT_PLAY_SERVICES_VERSION = "11+"
-def DEFAULT_SUPPORT_LIB_VERSION = "26.1.0"
+def DEFAULT_SUPPORT_LIB_VERSION = "23.0.1"
 
 def applicationId = ""
 if (findProject(':app') != null) {
     applicationId = project(':app').android.defaultConfig.applicationId
+}
+
+def projectFlavor = "preoreo"
+if (rootProject.hasProperty('oreoEXPERIMENTAL')) {
+    projectFlavor = "oreo"
 }
 
 // Check for application-defined play-services version
@@ -53,25 +85,16 @@ android {
 }
 
 dependencies {
+    releaseCompile project(path: ':react-native-mauron85-background-geolocation-common', configuration: "${projectFlavor}Release")
+    debugCompile project(path: ':react-native-mauron85-background-geolocation-common', configuration: "${projectFlavor}Debug")
     compile 'com.facebook.react:react-native:+'
-    // For Oreo compatibility we are forced to use supportLibVersion >= 26.1.0
-    // Unfortunately Android will soon stop supporting downloading libraries through the SDK Manager.
-    // That would require user to manually add:
-    //
-    // repositories {
-    //   maven { url 'https://maven.google.com' }
-    // }
-    //
-    // into his root build.gradle.
-    // @see https://developer.android.com/topic/libraries/support-library/setup.html
-    //
-    // If you don't like this please ask react guys nicely to add google maven repo into
-    // their templates.
     compile "com.google.android.gms:play-services-location:$playServicesVersion"
-    compile "com.android.support:support-compat:$supportLibVersion"
-    // Because of play services version 11, we need to override it's support-v4 library!
-    // You can check dependency graph: ./gradlew app:dependencies --configuration compile
-    compile "com.android.support:support-v4:$supportLibVersion"
+    if (projectFlavor == "oreo") {
+        compile "com.android.support:support-compat:$supportLibVersion"
+        // Because of play services version 11, we need to override it's support-v4 library!
+        // You can check dependency graph: ./gradlew app:dependencies --configuration compile
+        compile "com.android.support:support-v4:$supportLibVersion"
+    }
     compile 'com.github.tony19:logback-android:1.1.1-9'
     compile 'org.slf4j:slf4j-api:1.7.21'
     compile 'com.intentfilter:android-permissions:0.1.6'
