--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "react-native": ">0.49.0"
   },
   "devDependencies": {
-    "fs-extra": "^5.0.0",
     "plist": "^3.0.1"
   },
   "rnpm": {
     "commands": {
-      "postlink": "node node_modules/react-native-mauron85-background-geolocation/scripts/postlink.js"
+      "postlink": "node node_modules/react-native-mauron85-background-geolocation/scripts/postlink.js",
+      "postunlink": "node node_modules/react-native-mauron85-background-geolocation/scripts/postunlink.js"
     },
     "android": {
       "sourceDir": "./android/lib"
