--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,11 @@
+
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
@@ -10,6 +15,10 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url "$rootDir/../node_modules/react-native/android"
+        }
         jcenter()
     }
 }
