--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,10 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+MOCKITO_CORE_VERSION=1.10.19
+POWERMOCK_VERSION=1.6.2
+ROBOLECTRIC_VERSION=3.0
+JUNIT_VERSION=4.12
+FEST_ASSERT_CORE_VERSION=2.0M10
+SUPPORT_TEST_VERSION=0.5
