--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "scripts": {
+    "link": "@mauron85/react-native-background-geolocation/scripts/postlink.js",
+    "unlink": "@mauron85/react-native-background-geolocation/scripts/postunlink.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,10 +32,10 @@
     "url": "https://github.com/mauron85/react-native-background-geolocation/issues"
   },
   "homepage": "https://github.com/mauron85/react-native-background-geolocation#readme",
-  "peerDependencies": {
-    "react-native": ">0.49.0"
-  },
-  "devDependencies": {
+  "dependencies": {
     "plist": "^3.0.1"
+  },
+  "peerDependencies": {
+    "react-native": ">=0.60.5"
   }
 }
