--- a/android/lib/build.gradle
+++ b/android/lib/build.gradle
@@ -18,7 +18,6 @@
 //   buildToolsVersion = "26.0.2"
 //   supportLibVersion = "26.1.0"
 //   googlePlayServicesVersion = "11.8.0"
-//   oreoEXPERIMENTAL = "hellyes"
 // }
 //
 //
@@ -28,20 +27,14 @@
 apply plugin: 'com.android.library'
 
 apply from: '../common/VERSIONS.gradle'
-def playServicesVersion = getPlayServicesVersion()
-def supportLibVersion = getSupportLibVersion()
-def hasGradle3Support = getGradle3Support()
 def hasApp = findProject(':app') != null
 
-def projectFlavor = "preoreo"
-if (rootProject.hasProperty('oreoEXPERIMENTAL')) {
-    projectFlavor = "oreo"
-}
-
 // https://hackernoon.com/android-how-to-add-gradle-dependencies-using-foreach-c4cbcc070458
-def oreoDependencies = [
+def projDependencies = [
     [configuration: "implementation", dependency: libs.slf4j],
     [configuration: "implementation", dependency: libs.reactNative],
+    [configuration: "testImplementation", dependency: testLibs.testRunner],
+    [configuration: "testImplementation", dependency: testLibs.testRules],
     [configuration: "testImplementation", dependency: testLibs.junit],
     [configuration: "testImplementation", dependency: testLibs.powermockMockito],
     [configuration: "testImplementation", dependency: testLibs.powermockjUnit],
@@ -51,20 +44,6 @@ def oreoDependencies = [
     [configuration: "testImplementation", dependency: testLibs.robolectric],
     [configuration: "androidTestImplementation", dependency: testLibs.testRunner],
     [configuration: "androidTestImplementation", dependency: testLibs.testRules],
-]
-
-def preoreoDependencies = [
-    [configuration: "compile", dependency: libs.slf4j],
-    [configuration: "compile", dependency: libs.reactNative],
-    [configuration: "testCompile", dependency: testLibs.junit],
-    [configuration: "testCompile", dependency: testLibs.powermockMockito],
-    [configuration: "testCompile", dependency: testLibs.powermockjUnit],
-    [configuration: "testCompile", dependency: testLibs.powermockClassloading],
-    [configuration: "testCompile", dependency: testLibs.mockitoCore],
-    [configuration: "testCompile", dependency: testLibs.festAssertCore],
-    [configuration: "testCompile", dependency: testLibs.robolectric],
-    [configuration: "androidTestCompile", dependency: testLibs.testRunner],
-    [configuration: "androidTestCompile", dependency: testLibs.testRules],
 ]
 
 repositories {
@@ -83,6 +62,12 @@ android {
         evaluationDependsOn(':app')
     }
 
+    // Tip: https://stackoverflow.com/questions/39987669/renamingdelegatingcontext-is-deprecated-how-do-we-test-sqlite-db-now/52170737#52170737
+    // Gradle automatically adds 'android.test.runner' as a dependency.
+    useLibrary 'android.test.runner'
+    useLibrary 'android.test.base'
+    useLibrary 'android.test.mock'
+
     defaultConfig {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         minSdkVersion project.ext.getMinSdkVersion()
@@ -97,18 +82,9 @@ android {
 }
 
 dependencies {
-    if (hasGradle3Support) {
-        implementation project(path: ':@mauron85_react-native-background-geolocation-common')
+    implementation project(path: ':@mauron85_react-native-background-geolocation-common')
 
-        oreoDependencies.each {
-            add(it.configuration, it.dependency)
-        }
-    } else {
-        releaseCompile project(path: ':@mauron85_react-native-background-geolocation-common', configuration: "${projectFlavor}Release")
-        debugCompile project(path: ':@mauron85_react-native-background-geolocation-common', configuration: "${projectFlavor}Debug")
-
-        preoreoDependencies.each {
-            add(it.configuration, it.dependency)
-        }
+    projDependencies.each {
+        add(it.configuration, it.dependency)
     }
 }
